--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
     package="com.brianestrada.boilerplate">
+    <!-- TODO: Change Application Name -->
 
     <application
         android:allowBackup="true"
@@ -8,8 +9,6 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-
-    </application>
+        android:theme="@style/AppTheme"></application>
 
 </manifest>
