--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     final BUTTER_KNIFE_VERSION = '8.5.1'
     final SUPPORT_LIBRARY_VERSION = '25.2.0'
     final AUTO_VALUE_VERSION = '1.3'
+    final DAGGER_VERSION = '2.10-rc4'
     final AUTO_VALUE_GSON_VERSION = '0.4.6'
 
     //Core Libs
@@ -41,6 +42,11 @@ dependencies {
     compile "com.android.support:support-annotations:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:design:$SUPPORT_LIBRARY_VERSION"
     compile "com.android.support:support-v4:$SUPPORT_LIBRARY_VERSION"
+
+
+    //Dependency Injection
+    compile "com.google.dagger:dagger:$DAGGER_VERSION"
+    annotationProcessor "com.google.dagger:dagger-compiler:$DAGGER_VERSION"
 
     //Generators
     compile "com.jakewharton:butterknife:$BUTTER_KNIFE_VERSION"
